Removed the scrollbars and fixed a bug

--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -8,6 +8,17 @@
   box-sizing: border-box;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+*::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+*{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 html, body, #root{
   width: 100%;
   height: 100%;
